[gd_scene load_steps=8 format=2]

[ext_resource path="res://AngryBear.png" type="Texture" id=1]
[ext_resource path="res://Area of Effect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bear.gd" type="Script" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.04882
height = 5.26083

[sub_resource type="CircleShape2D" id=2]
radius = 174.109

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.3358
height = 9.56356

[node name="Bear" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.284794, 9.68294 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area of Effect" parent="." instance=ExtResource( 2 )]
position = Vector2( 0.284794, 9.68294 )
rotation = 1.5708
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="Area of Effect" index="0"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.7

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.225937, -0.451872 )
shape = SubResource( 3 )
[connection signal="area_entered" from="Area of Effect" to="." method="_on_Area_of_Effect_area_entered"]
[connection signal="area_exited" from="Area of Effect" to="." method="_on_Area_of_Effect_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Area of Effect"]

[editable path="Hurtbox"]
